plugins {
    id 'java'
    id 'org.javamodularity.moduleplugin' version '1.7.0'
}

group 'com.realizationtime'
version '1.0-SNAPSHOT'

sourceCompatibility = '14'

repositories {
    mavenCentral()
}

ext {
    lombokVersion = '1.18.12'
    javaFxVersion = '14.0.1'
}

dependencies {
    implementation "org.openjfx:javafx-base:${javaFxVersion}:linux"
    implementation "org.openjfx:javafx-graphics:${javaFxVersion}:linux"
    implementation "org.openjfx:javafx-fxml:${javaFxVersion}:linux"
    implementation "org.openjfx:javafx-controls:${javaFxVersion}:linux"
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
    testCompile "org.assertj:assertj-core:3.11.1"
    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}
